--- a/instance.yml
+++ b/instance.yml
@@ -57,7 +57,7 @@ resources:
           # start container
           sudo docker start mc
           if [ $? -ne 0 ]; then
-            sudo docker run -d -v mcs-vol:/data -it -e OPS=o0SirenSong0o -e "JVM_OPTS=-Xmx3G -Xms1G" -e MODE=survival -e VERSION=1.12.2 -e TYPE=FORGE -e FORGEVERSION=14.23.5.2768 -e EULA=TRUE -p 25565:25565 --restart=always --name mc itzg/minecraft-server
+          sudo docker run -d -v /:/data -it -e OPS=o0SirenSong0o -e EULA=TRUE -p 25565:25565 --name mc DockerFile
           fi
 
 - name: firewall
