--- a/instance.yml
+++ b/instance.yml
@@ -6,7 +6,7 @@ resources:
   name: minecraft-vm
   properties:
     zone: us-central1-f
-    machineType: https://www.googleapis.com/compute/v1/projects/minecraft-server-mod/zones/us-central1-f/machineTypes/n1-standard-2
+    machineType: https://www.googleapis.com/compute/v1/projects/PROJECT_ID/zones/us-central1-f/machineTypes/n1-standard-2
     serviceAccounts:
     - scopes:
       - "https://www.googleapis.com/auth/logging.write"
@@ -18,7 +18,7 @@ resources:
       initializeParams:
         sourceImage: https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/family/debian-9
     networkInterfaces:
-    - network: https://www.googleapis.com/compute/v1/projects/minecraft-server-mod/global/networks/default
+    - network: https://www.googleapis.com/compute/v1/projects/PROJECT_ID/global/networks/default
       # Access Config required to give the instance a public IP address
       accessConfigs:
       - name: External NAT
@@ -61,7 +61,7 @@ resources:
           # start container
           sudo docker start mc
           if [ $? -ne 0 ]; then
-            sudo docker run -d -it -v /opt/minecraft:/data -e OPS=o0SirenSong0o -e MEMORY=5G -e TYPE=CURSEFORGE -e CF_SERVER_MOD=https://www.curseforge.com/minecraft/modpacks/skyfactory-4/download/2725984/file -e EULA=TRUE -p 25565:25565 --name mc itzg/minecraft-server
+            sudo docker run -d -it -v /opt/minecraft:/data -e ENABLE_RCON=true -e RCON_PASSWORD=PLACEHOLDER_PASSWORD -e OPS=o0SirenSong0o -e MEMORY=5G -e TYPE=CURSEFORGE -e CF_SERVER_MOD=https://www.curseforge.com/minecraft/modpacks/skyfactory-4/download/2725984/file -e EULA=TRUE -p 25575:25575 -p 25565:25565 --name mc --log-driver=gcplogs itzg/minecraft-server
           fi
 
 - name: firewall
